Change path parameter name to id to avoid confusion. Improving type safety based on open api spec file
